# STAG_mistnosti

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/routers/: ws.py
app/static/: main.css
app/static/css/: normalize.css  skeleton.css
app/templates/: index.html
app/templates/components/: schedule_modal.html
